[project]
name = "spsam"
version = "0.0.1"
authors = [
  { name = "renzhg", email = "rzgedu@163.com" },
]
dependencies = ['plotly==5.17.0', 'seaborn==0.12.2', 'matplotlib==3.7.2', 'pandas==2.1.0', 'numpy==1.23.4',
    'anndata==0.9.2']
description = "Split Align Map"
readme = "README.md"
requires-python = ">=3.9.17"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/renzhonggan/spsam"
"Bug Tracker" = "https://github.com/renzhonggan/spsam/issues"
